# codexbot

./: .env.example  .gitignore  README.md  bot_config.py  config.py  pyproject.toml
codex_bot/: auto_reload.py  bot.py  connector.py  mytoken.json  tc_storage.py
