[tool.poetry]
name = "codex-bot"
version = "0.1.0"
description = ""
authors = ["CodeX"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
python-telegram-bot = "^20.8"
python-dotenv = "^1.0.1"
websockets = "^12.0"
aiohttp = "^3.9.3"
async-timeout = "^4.0.3"

[tool.poetry.scripts]
start-bot = "codex_bot.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
